Fixed z-index's on some dropdowns.

--- a/static/cranefly/css/cranefly/category.less
+++ b/static/cranefly/css/cranefly/category.less
@@ -127,6 +127,7 @@
           background: none;
           border: none;
           box-shadow: none;
+          z-index: 2;
 
           .dropdown-shadow{
             border-radius: @baseBorderRadius;
