--- a/static/cranefly/css/cranefly/forum.less
+++ b/static/cranefly/css/cranefly/forum.less
@@ -128,6 +128,7 @@
           background: none;
           border: none;
           box-shadow: none;
+          z-index: 2;
 
           .dropdown-shadow{
             border-radius: @baseBorderRadius;
