--- a/static/cranefly/css/cranefly/index.less
+++ b/static/cranefly/css/cranefly/index.less
@@ -135,6 +135,7 @@
           background: none;
           border: none;
           box-shadow: none;
+          z-index: 2;
 
           .dropdown-shadow{
             border-radius: @baseBorderRadius;
